--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    </head>
+</head>
 <body>
-    <script src ="first.js"></script>
+    <h1>10k coders</h1>
 </body>
 </html>
