--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>10k coders</h1>
+   <li><a href="./Day1.html"> Day 1</a></li>
+   <li><a href="./Day2.html">Day 2</a></li>
+   <li><a href="./Day3.html">Day 3</a></li>
+   <li><a href="./Day4.html">Day 4</a></li>
 </body>
 </html>
